TestCases/Errors/range_value/observations/aut_05_obs.spm
 obs   15-5   0.000342231348391513 
 obs   16-5   0.000684462696783025 
 obs   15-6   0.00166425434321095 
 obs   16-6   0.000651688623052743 
 obs   17-6   0.000298855497670041 
 obs   18-6   0.000171680284060994 
 obs   19-6   8.60585197934596e-05 
 obs   16-7   0.000155860349127182 
 obs   9-12   0.024 
 obs   11-12   0.00375 
 obs   6-13   0.0258823529411765 
 obs   9-13   0.024 
 obs   5-14   0.00105263157894737 
 obs   6-14   0.0258823529411765 
 obs   8-14   0.00493827160493827 
 obs   5-15   0.0059919028340081 
 obs   6-15   0.0223360692937073 
 obs   9-18   0 
 obs   9-19   0.0145756514808222 
 obs   9-20   0.0455733073038354 
 obs   10-20   0.0264906480385609 
 obs   11-20   0.0116666666666667 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   17-6   0 
 error_value   18-6   0 
 error_value   19-6   0 
 error_value   16-7   0 
 error_value   9-12   0 
 error_value   11-12   0 
 error_value   6-13   0 
 error_value   9-13   0 
 error_value   5-14   0 
 error_value   6-14   0 
 error_value   8-14   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   9-18   0 
 error_value   9-19   0 
 error_value   9-20   0 
 error_value   10-20   0 
 error_value   11-20   0 
